--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,37 @@
-body {
-  font-family: "Cantarell";
-  background-color: #000000;
+:root{
+  --whiteColor:#ffffff;
+  --primaryColor:#f2cef2;
+  --secondarycolor:#9e91b7;
+  --thirdColor:#df99f2;
+  --forthColor:#3d2da6;
+  --fifthColor:#07338c;
+  --sixthColor:#021740;
+  --primaryColor_low:#f2cef244;
 }
 
-p {
+@font-face {
+  font-family: wakanda;
+  src: url('../Fonts/Wakanda4Ever-gxg5p.ttf');
+}
+@font-face {
+  font-family: panthera;
+  src: url('../Fonts/PantheraRegular-MVZ9J.ttf');
+}
+@font-face {
+  font-family: cantarell;
+  src: url('../Fonts/Cantarell-Regular.ttf');
+}
+@font-face {
+  font-family: beyno;
+  src: url('../Fonts/FontsFree-Net-BEYNO.ttf');
+}
+body {
   font-family: "Cantarell";
-  font-size: 16px;
+  background-color: var(--sixthColor);
 }
 
 header .header_icons {
+  margin: 20px 40px;
   display: flex;
   align-items: center;
 }
@@ -30,67 +53,223 @@ header nav ul li a {
   text-transform: uppercase;
   text-decoration: none;
   color: #FFFFFF;
-  font-family: "Beyno";
+  font-family: "beyno";
 }
 
+h1{
+  font-family: 'panthera';
+  font-size: 68px;
+  color: var(--secondarycolor);
+}
+h2{
+  font-family: 'beyno';
+  font-size: 32px;
+  color: var(--secondarycolor);
+}
+/* Debut de la première section les propos de Black Panther */
 main .panther_section {
-  display: flex;
   width: 100%;
   height: 90vh;
   background-image: url("../Assets/Accueil/Pantherhome1.png");
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: 400px 0px;
+  background-position: 500px 0px;
 }
-main .panther_section .container {
-  width: 100%;
-  border: 1px solid red;
+.panther_section .black_panther{
+  width: 45%;
+  margin-top: 2%;
+  margin-left: 6%;
 }
-main .panther_section .container .black_panther {
-  margin: 70px 40px;
-  width: 50%;
-  color: #FFFFFF;
-}
-main .panther_section .container .black_panther .panther_title h1 {
-  margin: 0 auto;
-  font-family: "Panthera";
-  font-size: 68px;
-  font-weight: regular;
-  color: #9E91B7;
-  letter-spacing: 0.002px;
-}
-main .panther_section .container .black_panther .panther_title h2 {
-  font-family: "Beyno";
-  font-size: 32px;
-  color: #9E91B7;
-  margin-top: 0px;
-}
-main .panther_section .container .panther_text {
-  width: 70%;
-}
-main .panther_section .container .panther_text p {
-  font-family: "Cantarell";
-  font-size: 14px;
+.panther_section .black_panther .black_panther_text{
+  width: 90%;
   text-align: justify;
-  word-spacing: 0.01px;
 }
-main .panther_section .container .panther_text a {
-  color: #FFFFFF;
-}
-
-.panther_section .container .black_panther .personnage {
-  margin: 100px 10px;
+.panther_section .black_panther .black_panther_text p{
   width: 70%;
-  height: max-content;
-  background-color: #021740;
-  display: flex;
-}
-.panther_section .container .black_panther .personnage .okoy_sibling {
-  display: flex;
-}
-.panther_section .container .black_panther .personnage .okoy_sibling .okoye_team {
-  display: flex;
-  width: 100px;
+  font-size: 11px;
+  color: var(--whiteColor);
+  font-family: 'cantarell';
 }
 
-/*# sourceMappingURL=style.css.map */
+.panther_section .personnage .card{
+  margin-left:100px ;
+  margin-top: 300px;
+  display: flex;
+  background-color: var(--fifthColor);
+  height: 40vh;
+  align-items: center;
+  padding-left: 20px;
+}
+.fit_image{
+  height: 100%;
+}
+.killmonger_image{
+  width: 300px;
+}
+.panther_section .personnage .card #text{
+  padding: 0px 10px;
+}
+.panther_section .card .personnage_text{
+  /* margin-top: -30px; */
+  font-family: 'cantarell';
+  text-align: justify;
+  font-size: 12px;
+  font-weight: normal;
+  color: var(--whiteColor);
+
+}
+.tchala_section{
+  margin: 0 auto;
+}
+.container{
+  display: flex;
+  margin-top: 30%;
+  margin-left: 15%;
+  justify-content: space-between;
+}
+.container .tchala_text{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.container .tchala_text p{
+  text-align: justify;
+  color: var(--whiteColor);
+  font-family: 'cantarell';
+  font-size: 12px;
+  font-weight: normal;
+}
+.container .tchala_bio{
+  width:50% ;
+  margin-left: 10px;
+}
+.container .tchala_bio .back_ground{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: var(--fifthColor);
+  height: 22%;
+}
+.container .tchala_bio .back_ground img{
+  display: block;
+  margin: 0 auto;
+  width: 70%;
+  z-index: 0;
+}
+.container .tchala_bio .front_face{
+  margin-top: -250px;
+  width: 70%;
+  padding-top: 250px;
+  padding-bottom: 40px;
+  padding-left: 50px;
+  background-color: var(--whiteColor);
+  border-radius: 2%;
+}
+.container .tchala_bio h3{
+  text-align: center;
+  font-size: 26px;
+}
+.container .tchala_bio .front_face .buttons{
+  width: 90%;
+  margin: 0 auto;
+
+}
+.container .tchala_bio .front_face .buttons button{
+  background-color: var(--forthColor);
+  color: var(--whiteColor);
+  border-radius: 10px;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.container .tchala_bio .front_face .biographie p{
+  font-family: 'cantarell';
+  font-size: 16px;
+}
+/* Mise en Bold des elemements biographiques de Black Panther */
+.container .tchala_bio .front_face .biographie p .bold{
+  font-weight: bold;
+}
+.container .tchala_bio .front_face .biographie em{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+}
+/* Positionnement du poster arrondi de black panther */
+.container .tchala_bio .tchala_poster{ 
+  display: block;
+  text-align: center;
+  margin-top: 110%;
+}
+main .form_section{
+  background-image: url('../Assets/Accueil/Pantherhome7.png');
+  margin-top: -40%;
+  background-size: contain;
+  width: 100%;
+  height: 100vh;
+}
+main .form_section .displayForm{
+  padding: 40px 10px;
+  border-radius: 30%;
+  margin: 0 auto;
+  width: 60%;
+  background:linear-gradient(to bottom, var(--whiteColor)1%,  var(--primaryColor_low));
+}
+main .form_section .displayForm .formLogin{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin: 0 auto;
+}
+main .form_section .displayForm .formLogin h3{
+  margin: 0;
+  font-family: 'cantarell';
+  font-weight: bold;
+  font-size: 36px;
+}
+main .form_section .displayForm .formLogin p{
+  margin: 0;
+  font-family: 'cantarell';
+}
+main .form_section .displayForm .formLogin .input{
+  margin: 10px 0 ;
+  padding: 20px 10px;
+  border: 1px solid var(--sixthColor);
+  border-radius: 38px;
+  width: 80%;
+  background-color: transparent;
+}
+main .form_section .displayForm .formLogin textarea{
+  width: 85%;
+  border: 1px solid var(--sixthColor);
+  border-radius: 30px;
+  margin-bottom: 20px;
+  background-color: transparent;
+}
+main .form_section .displayForm .formLogin .btn{
+  width: 174px;
+  height: 54px;
+  margin: 0 auto;
+  padding: 10px 10px;
+  border: none;
+  border-radius: 38px;
+  background-color: var(--thirdColor);
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: 'cantarell';
+}
+main .form_section .displayForm .formLogin .btn:hover{
+  box-shadow: 0 0 20px var(--primaryColor);
+}
+footer{
+  background-image: url("../Assets/All pages/back_footer.png");
+  display: flex;
+}
+footer .circle{
+  width: 100px;
+  height: 100px;
+  border: 50%;
+  background-color:var(--forthColor);
+}
