--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,8 @@
   --fifthColor:#07338c;
   --sixthColor:#021740;
   --primaryColor_low:#f2cef244;
+  --thirdColor_low:#df99f256;
+  --fifthColor_low:#07338c63;
 }
 
 @font-face {
@@ -27,7 +29,9 @@
 }
 body {
   font-family: "Cantarell";
-  background-color: var(--sixthColor);
+  /* background-color: var(--sixthColor); */
+  background-image: url('../Assets/All pages/arrière_plan.png');
+  background-size: cover;
 }
 
 header .header_icons {
@@ -61,7 +65,7 @@ h1{
   font-size: 68px;
   color: var(--secondarycolor);
 }
-h2{
+h2:not(footer .social_side h2){
   font-family: 'beyno';
   font-size: 32px;
   color: var(--secondarycolor);
@@ -86,7 +90,7 @@ main .panther_section {
 }
 .panther_section .black_panther .black_panther_text p{
   width: 70%;
-  font-size: 11px;
+  font-size: 12px;
   color: var(--whiteColor);
   font-family: 'cantarell';
 }
@@ -95,7 +99,7 @@ main .panther_section {
   margin-left:100px ;
   margin-top: 300px;
   display: flex;
-  background-color: var(--fifthColor);
+  background-color: var(--sixthColor);
   height: 40vh;
   align-items: center;
   padding-left: 20px;
@@ -148,7 +152,7 @@ main .panther_section {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: var(--fifthColor);
+  background-color: var(--sixthColor);
   height: 22%;
 }
 .container .tchala_bio .back_ground img{
@@ -242,7 +246,8 @@ main .form_section .displayForm .formLogin .input{
   background-color: transparent;
 }
 main .form_section .displayForm .formLogin textarea{
-  width: 85%;
+  padding: 20px 10px;
+  width: 80%;
   border: 1px solid var(--sixthColor);
   border-radius: 30px;
   margin-bottom: 20px;
@@ -261,15 +266,53 @@ main .form_section .displayForm .formLogin .btn{
   font-family: 'cantarell';
 }
 main .form_section .displayForm .formLogin .btn:hover{
-  box-shadow: 0 0 20px var(--primaryColor);
+  box-shadow: 0 0 20px var(--sixthColor);
 }
 footer{
   background-image: url("../Assets/All pages/back_footer.png");
+  background-size: cover;
+}
+.footer{
   display: flex;
 }
-footer .circle{
-  width: 100px;
-  height: 100px;
-  border: 50%;
-  background-color:var(--forthColor);
+footer .marvel_side{
+  padding: 20px 100px;
+}
+.footer_icons{
+  position: relative;
+  top: -25%;
+  left: 10%;
+}
+footer .social_side{
+  justify-content: space-between;
+  display: flex;
+}
+footer .social_side div{
+  margin: 0 30px;
+}
+footer .social_side .icon_container{
+  display: flex;
+  padding: 0;
+  margin-top: -20px;
+}
+footer .social_side h2{
+  
+  font-size: 22px;
+  text-align: center;
+  letter-spacing: 28%;
+
+}
+footer .social_side .icon_container img{
+  margin: 15px;
+}
+footer .sayna_footer{
+  position: relative;
+  left:-55%;
+  top: -50%;
+}
+footer .policy{
+  position: relative;
+  color: var(--whiteColor);
+  bottom: 200px;
+  left: 50%;
 }
