--- a/public/css/wakanda.css
+++ b/public/css/wakanda.css
@@ -25,7 +25,7 @@ main .wakanda_section .wakanda_header{
 }
 main .wakanda_section .wakanda_header h2{
     text-align: left;
-    font-family: 'wakanda';
+    font-family: 'wakandaforever';
     margin-top: -50px;
 }
 main .wakanda_section .wakanda_header p{
